<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="12:00"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/title3"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cbDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@drawable/selector_cb_delete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="7" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Monday"
            android:textColor="@color/Day"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Tuesday"
            android:textColor="@color/Day"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Wednesday"
            android:textColor="@color/Day"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Thursday"
            android:textColor="@color/Day"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Friday"
            android:textColor="@color/Day"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Saturday"
            android:textColor="@color/Day"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/day_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Sunday"
            android:textColor="@color/Day"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>